--- a/booking/book/templates/book/register.html
+++ b/booking/book/templates/book/register.html
@@ -33,14 +33,28 @@
         .bg-gradient {
             background: linear-gradient(45deg, #3f51b5, #9c27b0);
         }
+        .register{
+            color: #9c27b0;
+           
+        }   
+        .card-header-custom{
+            background-color: #f5f1ed;
+            color: black;
+            border-radius: 1rem 1rem 0 0;
+        }
         </style>
-    
+        <div class="text-center bg-gradient text-white py-5">
+            <div class="container">
+                <h1 class="display-4">Welcome to LogaXP</h1>
+                <p class="lead">Empowering Businesses with Innovative HR and IT Solutions</p>
+            </div>
+        </div>
     <div class="container1">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card card-custom">
                     <div class="card-header card-header-custom text-center">
-                        <h2>Register</h2>
+                        <h2 class="register">Register</h2>
                     </div>
                     
 
