--- a/booking/book/templates/book/features.html
+++ b/booking/book/templates/book/features.html
@@ -78,6 +78,14 @@ h2 {
 .Meet-Our-Team {
     margin-top: 30px;
 }
+.card-title{
+    color: #007BFF;
+}
+.our-team{
+    color: #14213d;
+    text-align: center;
+
+}
 
 
 </style>
@@ -91,7 +99,7 @@ h2 {
 <div class="container mt-5">
 
     <div class="container mt-5">
-        <h2>Meet Our Team</h2>
+        <h2 class="our-team">Meet Our Team</h2>
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
